--- a/TodoList/app/src/main/AndroidManifest.xml
+++ b/TodoList/app/src/main/AndroidManifest.xml
@@ -1,21 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.junhyeoklee.todolist">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.example.android.todolist">
 
     <application
-        android:allowBackup="true"
+        android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".ui.view_activity.MainActivity">
+        android:theme="@style/AppTheme"
+        tools:ignore="GoogleAppIndexingWarning">
+
+        <!-- The manifest entry for the MainActivity -->
+        <activity android:name="com.junhyeoklee.todolist.ui.view_activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <!-- AddTaskActivity -->
+        <activity
+            android:name="com.junhyeoklee.todolist.ui.view_activity.AddTaskActivity"
+            android:label="@string/add_task_activity_name" />
+
     </application>
 
 </manifest>
